--- a/views/fotos_formulario.ejs
+++ b/views/fotos_formulario.ejs
@@ -11,9 +11,10 @@
     <p class="h2 text-center mt-4">Photos Management</p>
     
     <div class="row mt-4">
-      <div class="col-md-6 mx-auto text-center">
+      <div class="col-md-8 mx-auto text-center">
         <a href="/photos/list" class="btn btn-primary btn-lg mb-3">View All Photos</a>
         <a href="/photos/rate" class="btn btn-secondary btn-lg mb-3">Filter by Rate</a>
+        <a href="/photos/search" class="btn btn-info btn-lg mb-3">Search by ID</a>
       </div>
     </div>
 
